# FlightBooking-

./: .env  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  compose.yaml  dependencies.py  main.py  pyproject.toml
crud/: database.py  users.py
external_services/: emails.py
models/: users.py
routers/: users.py
schemas/: users.py
test/: test_bookings.py  test_users_auth.py
utils/: authentication.py  security.py
